--- a/src/Component/form.css
+++ b/src/Component/form.css
@@ -54,3 +54,22 @@ body {
 .button:hover {
   background-color: #0056b3;
 }
+
+.suggestions-dropdown {
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  z-index: 1000;
+}
+
+.suggestions-dropdown li {
+  padding: 5px;
+  cursor: pointer;
+}
+
+.suggestions-dropdown li:hover {
+  background-color: #f0f0f0;
+}
